# comfyui_densepose

./: .gitignore  BasicDensepose.py  __init__.py  log.py  pyproject.toml
.ipynb_checkpoints/: BasicDensepose-checkpoint.py  __init__-checkpoint.py
custom_densepose/: __init__.py
custom_densepose/.ipynb_checkpoints/: util-checkpoint.py
custom_densepose/densepose/: __init__.py
custom_densepose/densepose/.ipynb_checkpoints/: __init__-checkpoint.py
